--- a/Map/MainWindow.xaml
+++ b/Map/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Map"
         mc:Ignorable="d"
         xmlns:m="clr-namespace:Microsoft.Maps.MapControl.WPF;assembly=Microsoft.Maps.MapControl.WPF"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="800" Width="1024" WindowState="Maximized">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
